syntax = "proto3";

option go_package = "./hello_world";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string clientName = 1;
  int32 seqNum = 2;
}

// The response message containing the greetings
message HelloReply {
  string clientName = 1;
  int32 seqNum = 2;
}



